--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,23 +27,21 @@ jobs:
       # Create production zip
       - name: Create Production ZIP
         run: |
-          mkdir -p release/prod
-          cp -r fxmanifest.lua client shared web/build release/prod/
-          cd release/prod
-          zip -r ../../b2-sleekprogress-prod.zip ./*
-          cd ../..
+          mkdir prod
+          cp -r fxmanifest.lua client shared web/build prod/
+          cd prod
+          zip -r ../b2-sleekprogress-prod.zip *
+          cd ..
           
       # Create development zip
       - name: Create Development ZIP
         run: |
-          mkdir -p release/dev
-          cp -r . release/dev/
-          rm -rf release/dev/release
-          rm -rf release/dev/node_modules
-          rm -rf release/dev/web/node_modules
-          cd release/dev
-          zip -r ../../b2-sleekprogress-dev.zip ./*
-          cd ../..
+          zip -r b2-sleekprogress-dev.zip * \
+          -x "prod/*" \
+          -x "*.zip" \
+          -x "node_modules/*" \
+          -x "web/node_modules/*" \
+          -x "web/build/*"
           
       # Create Release
       - name: Create Release
