--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write # Add this line to grant write permissions
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -45,8 +48,9 @@ jobs:
           
       # Create Release
       - name: Create Release
-        id: create_release
         uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: |
             b2-sleekprogress-prod.zip
@@ -65,5 +69,3 @@ jobs:
             - Complete source code
             - Requires npm install and build
             - Includes all development files
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
